# TennisBallCollector

./: README.md
catcher_control/: package.xml  readme.md  setup.cfg  setup.py
catcher_control/catcher_control/: ctrl.py
detection_balles/: CMakeLists.txt  README.md  package.xml
detection_balles/src/: detection.cpp
detection_balles_cage/: CMakeLists.txt  package.xml  readme.md
detection_balles_cage/src/: detection.cpp
detection_joueurs/: CMakeLists.txt  README.md  package.xml
detection_joueurs/src/: detection.cpp
field_command/: ReadMe.md  package.xml  setup.cfg  setup.py
field_command/field_command/: field_node.py  roblib.py
labelisation_balles/: README.md  package.xml  setup.cfg  setup.py
labelisation_balles/labelisation_balles/: labelisation.py
localisation_aruco/: CMakeLists.txt  README.md  REAME.md  package.xml
localisation_aruco/src/: aruco.cpp  cameraMatrix.ext  distCoeffs.ext  simple_view.cpp
reports/: Debrief-03-02-AFFRAIX.md  Debrief-17-02-Turck.md  Debrief-19-02-Archet.md  Debrief-24-02-Sanchez.md  Debrief-27-01-Alex.md  Goals-03-02-AFFRAIX.md  Goals-19-02-Archet.md  Goals-24-02-Sanchez.md  Goals-27-01-Alex.md
robot_control/: package.xml  readme.md  setup.py
robot_control/launch/: launcher.launch.py  launcher_robot_eloquent.launch.py  launcher_robot_foxy.launch.py
robot_control/robot_control/: fake_gps.py  rbt_control.py  robot_control.py
robot_tennis_description/: CMakeLists.txt  package.xml  readme.md
robot_tennis_gazebo/: CMakeLists.txt  package.xml  readme.md
yaw_ctrl/: CMakeLists.txt  package.xml  readme.md
(+13 files in other folders)
